# huggingface-playground

./: .gitignore  README.md
huggingface-cpp-inference-client/: README.md
huggingface-inference-provider-cpp-client/: CMakeLists.txt  README.md
pose_estimation/: CMakeLists.txt  export_vitpose.py  main.cpp
video_classification/: README.md
video_classification/configs/: timesformer.json  videomae.json  vivit.json
video_classification/include/video_classification/: image_processor.hpp  timesformer_image_processor.hpp  triton_client.hpp  vivit_image_processor.hpp
video_classification/src/app/: main.cpp
video_classification/src/core/: CMakeLists.txt  image_processor.cpp  timesformer_image_processor.cpp  triton_client.cpp  videomae_image_processor.cpp  vivit_image_processor.cpp
